--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Run clang-format on C++ and Protobuf files
         run: |
+          set -x
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           sha=${{steps.count.outputs.first_commit}}
           git clang-format-$version --style google --diff $sha > diff.out 2>&1
