--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -60,7 +60,7 @@ jobs:
           echo first_commit="$first" >> "$GITHUB_OUTPUT"
           num_commits="$(jq length < ./commits.txt)"
           (( num_commits++ ))
-          echo num_commits=="$num_commits" >> "$GITHUB_OUTPUT"
+          echo num_commits="$num_commits" >> "$GITHUB_OUTPUT"
 
       - name: Check out a copy of the TFQ git repository
         uses: actions/checkout@v4
