--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -55,11 +55,8 @@ jobs:
         env:
           commits: ${{ toJson(github.event.commits) }}
         run: |
-          printf "%s" "$commits" > ./commits.txt
-          first=$(jq 'sort_by(.timestamp) | first | .id' < ./commits.txt)
-          echo first_commit="$first" >> "$GITHUB_OUTPUT"
-          num_commits="$(jq length < ./commits.txt)"
-          (( num_commits++ ))
+          printf "%s" "$commits" > ./commits.json
+          num_commits="$(jq length < ./commits.json)"
           (( num_commits++ ))
           echo num_commits="$num_commits" >> "$GITHUB_OUTPUT"
 
@@ -70,12 +67,16 @@ jobs:
 
       - name: Run clang-format on C++ and Protobuf files
         run: |
-          set -x
+          set -x -e
+          jq 'sort_by(.timestamp)' < ./commits.json > ./sorted-commits.json
+          first=$(jq 'first | .id' < ./sorted-commits.json)
+          # Get the commit that came before the set of commits in this event.
+          starting_sha="$(git rev-parse $first^)"
+          ending_sha=$(jq 'last | .id' < ./sorted-commits.json)
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-          sha="$(git rev-parse ${{steps.count.outputs.first_commit}}^)"
-          git diff-tree --no-commit-id --name-only -r "$sha"
+          # Run git-clang-format on the range of commits in this event.
           git clang-format-$version -v --style google --diff \
-            --commit "$sha" > diff.out 2>&1
+            "$starting_sha" "$ending_sha" > diff.out 2>&1
           exit_code=$?
           if (( exit_code == 1 )) && [[ -s ./diff.out ]]; then
             # Write output both here and to the job summary.
