--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -36,6 +36,14 @@ on:
         description: 'clang-format version:'
         type: string
 
+      first_commit:
+        description: 'SHA of first commit:'
+        type: string
+
+      last_commit:
+        description: 'SHA of last commit:'
+        type: string
+
 # Cancel previously-started but still active workflow runs on the same branch.
 concurrency:
   group: ${{github.workflow}}-${{github.event.pull_request.number||github.ref}}
@@ -50,32 +58,50 @@ jobs:
     name: Check the format of C++ and Protobuf files
     runs-on: ubuntu-24.04
     steps:
-      - name: Count how many git commits need to be fetched
-        id: count
-        env:
-          commits: ${{ toJson(github.event.commits) }}
+      - name: Perform initial sanity checks
+        if: >
+          github.event_name == 'workflow_dispatch'
+          && (! inputs.first_commit || ! inputs.last_commit)
         run: |
-          printf "%s" "$commits" > ./commits.json
-          num_commits="$(jq length < ./commits.json)"
-          (( num_commits++ ))
-          echo num_commits="$num_commits" >> "$GITHUB_OUTPUT"
+          echo ":error::Must provide both first and last commit SHA's"
+
+      - name: Determine the first and last commit SHAs to use
+        id: commits
+        env:
+          commits: ${{toJson(github.event.commits)}}
+        run: |
+          if [[ "${{github.event_name}}" == "workflow_dispatch" ]]; then
+            first="${{inputs.first_commit}}"
+            last="${{inputs.last_commit}}"
+          else
+            printf "%s" "$commits" > ./commits.json
+            jq 'sort_by(.timestamp)' < ./commits.json > ./sorted-commits.json
+            first=$(jq 'first | .id' < ./sorted-commits.json)
+            last=$(jq 'last | .id' < ./sorted-commits.json)
+          fi
+          # Get the commit that came before the set of commits in this event.
+          starting_sha=$(git rev-parse $first^)
+          ending_sha=$last
+          num_commits="$(git rev-list --count $starting_sha..$ending_sha)"
+          {
+          echo num_commits="$num_commits"
+          echo starting_sha="$starting_sha"
+          echo ending_sha="$ending_sha"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Check out a copy of the TFQ git repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: ${{steps.count.outputs.num_commits}}
+          fetch-depth: ${{steps.commits.outputs.num_commits}}
 
       - name: Run clang-format on C++ and Protobuf files
+        env:
+          starting_sha: ${{steps.commits.outputs.starting_sha}}
+          ending_sha: ${{steps.commits.outputs.ending_sha}}
         run: |
           set -x -e
-          ls -l
-          jq 'sort_by(.timestamp)' < ./commits.json > ./sorted-commits.json
-          first=$(jq 'first | .id' < ./sorted-commits.json)
-          # Get the commit that came before the set of commits in this event.
-          starting_sha=$(git rev-parse $first^)
-          ending_sha=$(jq 'last | .id' < ./sorted-commits.json)
-          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           # Run git-clang-format on the range of commits in this event.
+          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           git clang-format-$version -v --style google --diff \
             "$starting_sha" "$ending_sha" > diff.out 2>&1
           exit_code=$?
