--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -44,30 +44,38 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Count how many git commits need to be fetched
-        id: count
+        id: commits
         env:
           commits: ${{toJson(github.event.commits)}}
         run: |
           printf "%s" "$commits" > ./commits.json
           num_commits="$(jq length < ./commits.json)"
           (( num_commits++ ))
-          echo num_commits="$num_commits" >> "$GITHUB_OUTPUT"
+          jq 'sort_by(.timestamp)' < ./commits.json > ./sorted-commits.json
+          first=$(jq 'first | .id' < ./sorted-commits.json)
+          last=$(jq 'last | .id' < ./sorted-commits.json)
+          {
+          echo num_commits="$num_commits"
+          echo first_sha="$first"
+          echo last_sha="$last"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Check out a copy of the TFQ git repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: ${{steps.count.outputs.num_commits}}
+          fetch-depth: ${{steps.commits.outputs.num_commits}}
 
       - name: Run clang-format on C++ and Protobuf files
+        env:
+          first_sha: ${{steps.commits.outputs.first_sha}}
+          last_sha: ${{steps.commits.outputs.last_sha}}
         run: |
           set -x -e
-          jq 'sort_by(.timestamp)' < ./commits.json > ./sorted-commits.json
-          first=$(jq 'first | .id' < ./sorted-commits.json)
           # Get the commit that came before the set of commits in this event.
-          starting_sha=$(git rev-parse $first^)
-          ending_sha=$(jq 'last | .id' < ./sorted-commits.json)
-          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
+          starting_sha="$(git rev-parse $first_sha^)"
+          ending_sha="$last_sha"
           # Run git-clang-format on the range of commits in this event.
+          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           git clang-format-$version -v --style google --diff \
             "$starting_sha" "$ending_sha" > diff.out 2>&1
           exit_code=$?
