--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -56,8 +56,8 @@ jobs:
           last=$(jq 'last | .id' < ./sorted-commits.json)
           {
           echo num_commits="$num_commits"
-          echo first_sha="$first"
-          echo last_sha="$last"
+          echo first_sha=$first
+          echo last_sha=$last
           } >> "$GITHUB_OUTPUT"
 
       - name: Check out a copy of the TFQ git repository
@@ -72,8 +72,8 @@ jobs:
         run: |
           set -x -e
           # Get the commit that came before the set of commits in this event.
-          starting_sha="$(git rev-parse $first_sha^)"
-          ending_sha="$last_sha"
+          starting_sha=$(git rev-parse $first_sha^)
+          ending_sha=$last_sha
           # Run git-clang-format on the range of commits in this event.
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           git clang-format-$version -v --style google --diff \
