--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -14,6 +14,8 @@ env:
   clang_format_ver: '18'
 
 on:
+  merge_group:
+    - checks_requested
   pull_request:
     types: [opened, synchronize]
     paths:
