--- a/.github/workflows/lint-python-files.yaml
+++ b/.github/workflows/lint-python-files.yaml
@@ -18,7 +18,8 @@ env:
 
 on:
   merge_group:
-    - checks_requested
+    types:
+      - checks_requested
   pull_request:
     types: [opened, synchronize]
     paths:
