--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -51,7 +51,9 @@ jobs:
           commits: ${{toJson(github.event.commits)}}
           ref: ${{github.event.pull_request.base_ref}}
         run: |
+          set -x
           printf "%s" "$event"
+          echo "$GITHUB_REF" 
 
         # run: |
         #   printf "%s" "$commits" > ./commits.json
