--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -56,6 +56,7 @@ jobs:
           echo "$GITHUB_REF"
           echo "${{ github.event.pull_request.base.ref }}"
           echo "$GITHUB_EVENT_PATH"
+          cat "$GITHUB_EVENT_PATH"
 
         # run: |
         #   printf "%s" "$commits" > ./commits.json
