--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -52,11 +52,8 @@ jobs:
           ref: ${{github.event.pull_request.base_ref}}
         run: |
           set -x
-          printf "%s" "$event"
-          echo "$GITHUB_REF"
-          echo "${{ github.event.pull_request.base.ref }}"
-          echo "$GITHUB_EVENT_PATH"
-          cat "$GITHUB_EVENT_PATH"
+          jq '.[] | .commit.sha' "$GITHUB_REF"
+
 
         # run: |
         #   printf "%s" "$commits" > ./commits.json
