--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -52,6 +52,9 @@ jobs:
           ref: ${{github.event.pull_request.base_ref}}
         run: |
           set -x
+          echo "::group::group"
+          cat "$GITHUB_EVENT_PATH"
+          echo "::endgroup::"
           jq '.[] | .commit.sha' "$GITHUB_EVENT_PATH"
 
 
