--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -50,6 +50,8 @@ jobs:
           event: ${{toJson(github.event)}}
           commits: ${{toJson(github.event.commits)}}
           ref: ${{github.event.pull_request.base_ref}}
+          env:
+            GH_TOKEN: ${{ github.token }}
         run: |
           set -x
           # echo "::group::group"
