--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -50,9 +50,6 @@ jobs:
           GH_TOKEN: ${{github.token}}
         run: |
           set -x
-          echo ${{github.ref_name}}
-          echo ${{ github.head_ref || github.ref_name }} 
-
           url="${{github.event.pull_request.commits_url}}"
           # Create an array of commit SHAs sorted by timestamp.
           # shellcheck disable=SC2207
@@ -68,46 +65,47 @@ jobs:
           echo last_sha=$last
           } >> "$GITHUB_OUTPUT"
 
-      # - name: Check out a copy of the TFQ git repository
-      #   uses: actions/checkout@v4
-      #   with:
-      #     fetch-depth: ${{steps.commits.outputs.fetch_commits}}
+      - name: Check out a copy of the TFQ git repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{github.head_ref || github.ref_name}}
+          fetch-depth: ${{steps.commits.outputs.fetch_commits}}
 
-      # - name: Run clang-format on C++ and Protobuf files
-      #   env:
-      #     first_sha: ${{steps.commits.outputs.first_sha}}
-      #     last_sha: ${{steps.commits.outputs.last_sha}}
-      #   run: |
-      #     set +e
-      #     set -x
-      #     # shellcheck disable=SC2086
-      #     # Get the commit that came before the set of commits in this event.
-      #     starting_sha=$(git rev-parse $first_sha^)
-      #     ending_sha=$last_sha
-      #     # Run git-clang-format on the range of commits in this event.
-      #     version="${{env.clang_format_ver}}"
-      #     git clang-format-$version -v --style google --diff \
-      #       "$starting_sha" "$ending_sha" > diff.out 2>&1
-      #     exit_code=$?
-      #     if (( exit_code == 1 )); then
-      #       # Write output both here and to the job summary.
-      #       TERM=xterm-color
-      #       bo=$'\e[1m'
-      #       bl=$'\e[38;5;117m'
-      #       rs=$'\e[0m'
-      #       hi="👋🏻"
-      #       u="https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
-      #       echo "$hi ${bl}Visit $bo$u${rs}$bl for formatted diff output$rs $hi"
-      #       echo "::group::clang-format output"
-      #       cat diff.out
-      #       echo "::endgroup::"
-      #       # shellcheck disable=SC2006
-      #       {
-      #       echo "## Output from <code>clang-format</code> version $version"
-      #       echo ""
-      #       echo '```diff'
-      #       echo "$(< diff.out)"
-      #       echo '```'
-      #       } >> "$GITHUB_STEP_SUMMARY"
-      #     fi
-      #     exit $exit_code
+      - name: Run clang-format on C++ and Protobuf files
+        env:
+          first_sha: ${{steps.commits.outputs.first_sha}}
+          last_sha: ${{steps.commits.outputs.last_sha}}
+        run: |
+          set +e
+          set -x
+          # shellcheck disable=SC2086
+          # Get the commit that came before the set of commits in this event.
+          starting_sha=$(git rev-parse $first_sha^)
+          ending_sha=$last_sha
+          # Run git-clang-format on the range of commits in this event.
+          version="${{env.clang_format_ver}}"
+          git clang-format-$version -v --style google --diff \
+            "$starting_sha" "$ending_sha" > diff.out 2>&1
+          exit_code=$?
+          if (( exit_code == 1 )); then
+            # Write output both here and to the job summary.
+            TERM=xterm-color
+            bo=$'\e[1m'
+            bl=$'\e[38;5;117m'
+            rs=$'\e[0m'
+            hi="👋🏻"
+            u="https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+            echo "$hi ${bl}Visit $bo$u${rs}$bl for formatted diff output$rs $hi"
+            echo "::group::clang-format output"
+            cat diff.out
+            echo "::endgroup::"
+            # shellcheck disable=SC2006
+            {
+            echo "## Output from <code>clang-format</code> version $version"
+            echo ""
+            echo '```diff'
+            echo "$(< diff.out)"
+            echo '```'
+            } >> "$GITHUB_STEP_SUMMARY"
+          fi
+          exit $exit_code
