--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -4,8 +4,7 @@
 
 name: C++ & Protobuf file checks
 run-name: >
-  C++ & Protobuf lint & format checks for ${{github.event_name}}
-  by ${{github.triggering_actor}}
+  C++ & Protobuf lint/format checks for ${{github.event_name}}
 
 env:
   # Version of clang-format to use. Can be overridden with workflow_dispatch.
@@ -23,12 +22,6 @@ on:
       - '**.cc'
       - '**.h'
       - '**.proto'
-
-  # push:
-  #   paths:
-  #     - '**.cc'
-  #     - '**.h'
-  #     - '**.proto'
 
 # Cancel previously-started but still active workflow runs on the same branch.
 concurrency:
@@ -83,8 +76,7 @@ jobs:
           starting_sha=$(git rev-parse $first_sha^)
           ending_sha=$last_sha
           # Run git-clang-format on the range of commits in this event.
-          version="${{env.clang_format_ver}}"
-          git clang-format-$version -v --style google --diff \
+          git clang-format-${{env.clang_format_ver}} -v --style google --diff \
             "$starting_sha" "$ending_sha" > diff.out 2>&1
           exit_code=$?
           if (( exit_code == 1 )); then
