--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -2,7 +2,7 @@
 # This workflow runs clang-formmat. It only examines C++ and Protobuf files.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-name: "CI: Check C++ & Protobuf files"
+name: C++ file checks
 run-name: >
   C++ & Protobuf lint/format checks for ${{github.event_name}}
 
