--- a/.github/workflows/citation-updater.yaml
+++ b/.github/workflows/citation-updater.yaml
@@ -56,7 +56,7 @@ jobs:
         run: |
           set -x
           pip install cffconvert
-          if [[ $(cffconvert --validate > /dev/null 2>&1)
+          if [[ $(cffconvert --validate > /dev/null 2>&1) \
                 && $(yq .version) == ${{env.version}} ]]; then
             echo "valid=true" >> "$GITHUB_OUTPUT"
           else
