--- a/.github/workflows/citation-updater.yaml
+++ b/.github/workflows/citation-updater.yaml
@@ -56,8 +56,9 @@ jobs:
         run: |
           set -x
           pip install cffconvert
-          if [[ $(cffconvert --validate > /dev/null 2>&1) \
-                && $(yq .version) == ${{env.version}} ]]; then
+          cffconvert --validate > /dev/null 2>&1
+          (( $? == 0 )) && validated=true || validated=false
+          if [[ $validated && "$(yq .version)" == "${{env.version}}" ]]; then
             echo "valid=true" >> "$GITHUB_OUTPUT"
           else
             echo "valid=false" >> "$GITHUB_OUTPUT"
