--- a/.github/workflows/citation-updater.yaml
+++ b/.github/workflows/citation-updater.yaml
@@ -56,6 +56,7 @@ jobs:
         run: |
           set -x
           pip install cffconvert
+          cffconvert --version
           cffconvert --validate
           (( $? == 0 )) && validated=true || validated=false
           if [[ $validated && "$(yq .version)" == "${{env.version}}" ]]; then
