--- a/.github/workflows/citation-updater.yaml
+++ b/.github/workflows/citation-updater.yaml
@@ -22,6 +22,13 @@ jobs:
     permissions:
       contents: write
     steps:
+      - if: github.event.release.tag_name != ''
+        name: Check that the release tag is not empty
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        with:
+          script: |
+            core.setFailed('Empty GitHub release tag_name')
+
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
