--- a/.github/workflows/citation-updater.yaml
+++ b/.github/workflows/citation-updater.yaml
@@ -86,11 +86,9 @@ jobs:
         run: |
           set -x
           pip install cffconvert
-          cffconvert --version
-          valid=false
-          cffconvert --validate > /dev/null 2>&1 && valid=true
-          new_version=$(yq -r .version)
-          [[ "$new_version" == "${{env.written_version}}" ]] && valid=true
+          valid=true
+          cffconvert --validate > /dev/null 2>&1 || valid=false
+          [[ "$new_version" == "${{env.written_version}}" ]] || valid=false
           echo "valid=$valid" >> "$GITHUB_OUTPUT"
 
       - if: steps.verify-cff.outputs.valid == 'false'
