--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
   test:
     runs-on: ubuntu-24.04
     timeout-minutes: 5
-    if: github.repository == 'quantumlib/Cirq'
+    if: github.repository == 'mhucka/teststuff'
     env:
       # The next var is used by Bash. We add 'xtrace' to the options if this run
       # is a workflow_dispatch invocation and the user set the 'trace' option.
