--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,9 +29,8 @@ jobs:
   test:
     runs-on: ubuntu-24.04
     timeout-minutes: 5
-    if: github.repository == 'mhucka/teststuff'
     env:
       SHELLOPTS: 'xtrace'
-      foo: 'macos-15'
+      foo: macos-15
     steps:
       - run: echo ${{fromJSON(env.foo)}}
