--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,8 +28,22 @@ jobs:
 
   test:
     runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        conf: [
+          {os: macos-14, wh: macosx, arch: x86_64, py: 10, pyarch: x64},
+          {os: ubuntu-24.04, wh: manylinux, arch: x86_64, py: 10, pyarch: x64},
+ #         {os: windows-2019, wh: win, arch: AMD64,  py: 10, pyarch: x64},
+        ]
     env:
-      SHELLOPTS: 'xtrace'
-      foo: 15
+      CIBW_ARCHS: ${{matrix.conf.arch}}
+      CIBW_BUILD: cp3${{matrix.conf.py}}-${{matrix.conf.wh}}_${{matrix.conf.arch}}
+#      CIBW_ENVIRONMENT: 'MACOSX_DEPLOYMENT_TARGET=${{matrix.conf.dep}}'
     steps:
-      - run: echo ${{format('macos-{0}', env.foo)}}
+      - if: startsWith(matrix.conf.os, 'macos')
+        run: |
+          os=${{matrix.conf.os}}
+          echo MACOSX_DEPLOYMENT_TARGET=${os: -2} >> "$GITHUB_ENV"
+
+      - run: echo "$MACOSX_DEPLOYMENT_TARGET"
